# quotes-clock

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.ps1  pyproject.toml
.gitea/workflows/: native-idf.yml
data/: quotes.gap-fillers.yaml  quotes.sample.yaml
docs/: content-pipeline.md  datasets.md  device-settings.md  esp32-m075-bringup.md  esp32-wroom-32d-notes.md  ota-static-hosting.md  provisioning.md  quote-library.md  timekeeping.md
docs/oem/: README.md
firmware/native-idf/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/native-idf/main/: CMakeLists.txt  app_config.cpp  app_config.hpp  main.cpp  native_display.cpp  native_display.hpp  native_https_server.cpp  native_https_server.hpp  native_sntp.cpp  native_sntp.hpp  native_wifi.cpp  native_wifi.hpp  platform_state.cpp  platform_state.hpp
firmware/oem/: README.md
hardware/: bringup-notes.example.md
hardware/samples/: README.md
tools/: check_binary_size.py  check_release_tree.py  display_text.py  esp32_firmware_tool.bat  export_missing_minutes.py  generate_native_assets.py  generate_native_tls.py  generate_quotes_cpp.py  import_johannesne_literature_clock.py  import_literature_clock.py  import_quotables.py  merge_quote_libraries.py  package_native_rescue.py  report_display_text_glyphs.py  report_quote_coverage.py  validate_quotes.py
